# smart-file-explorer

./: .gitignore  CMakeLists.txt  advanced_indexer.cpp  advanced_indexer.h  base64.cpp  base64.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  openai.cpp  openai.h  process_file.cpp  process_file.h
